# imagine

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_ONBOARDING.md  PT_BR_VOICE_DEBUG.md  QWEN.md  README.md  pyproject.toml
docs/research/: asset-provider-matrix.md  image-motion-from-stills-plan.md  terminal-video-creation-api-integration.md
src/local_video_mvp/: cli.py  models.py  pipeline.py  thumbnail_studio.py  trends.py  tui.py  visual_vocab.py  youtube.py
src/local_video_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_news_mode.py  test_thumbnail.py  test_visual_vocabulary.py
voice_samples/ptbr/: voice_ab_report.json
