[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-video-mvp"
version = "0.1.0"
description = "Local-first long-form explainer video generator MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "feedparser>=6.0.11",
  "Pillow>=10.4.0",
  "playwright>=1.52.0",
  "pytrends>=4.9.0",
  "requests>=2.32.0",
  "trafilatura>=1.9.0",
]

[project.optional-dependencies]
# ponytail: MeloTTS dropped — it pins transformers==4.27.4, dragging an ancient
# tokenizers that won't build on Python 3.12 / rustc and conflicts with kokoro.
# Re-add MeloTTS only in a dedicated Python 3.11 env if you specifically need it.
voice = [
  "kokoro>=0.7.16",
]
melo = ["MeloTTS @ git+https://github.com/myshell-ai/MeloTTS.git"]
captions = ["faster-whisper>=1.1.0"]

[project.scripts]
local-video-mvp = "local_video_mvp.cli:main"
imagine = "local_video_mvp.cli:imagine_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
